Neo-Features/Theme/Features/Neo-Essentials/Neo-Essentials.css
@media not -moz-pref("neo.features.disabled") {
    @media not -moz-pref("neo.features.essentials.disabled") {
        :root:not([animating-background="true"]){
            & .zen-essentials-container:not([hidden="true"]) {
                &::before {
                    transition: opacity 0.4s ease, height 0.4s ease;
                }
            }
        }
        
        #navigator-toolbox {
            & .zen-essentials-container {

                --Neo-Essentials-Max-Height: calc((var(--tab-min-height) + 6px) * var(--Neo-Essentials-Max-Tabs)) !important;

                overflow-y: auto !important;
                scrollbar-width: none !important;
                scroll-behavior: smooth !important;

                @media not -moz-pref("neo.features.essentials.keep-expanded") {
                    max-height: calc(var(--tab-min-height) + 4px + 12px) !important;
                }

                & .tabbrowser-tab {
                    transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out !important;
                }
            }

            @media not -moz-pref("neo.features.essentials.collapsed.disabled") {
                &:not([zen-sidebar-expanded="true"]) .zen-essentials-container {
                    display: grid !important;

                    & .tabbrowser-tab:not([selected]) {
                        @media not -moz-pref("neo.features.essentials.keep-expanded") {
                            opacity: 0 !important;
                            visibility: hidden !important;
                        }
                    }

                    /* Reorder selected tab to stay visible */
                    & .tabbrowser-tab[selected] {
                        /* Moves selected tab to the first position */
                        order: -1 !important;
                        /* Sticks selected tab to the top */
                        position: sticky !important;
                        top: 0 !important;
                        /* Mover selected tab over other tabs */
                        z-index: 9999 !important;
                    }

                    &:hover {
                        max-height: calc(var(--Neo-Essentials-Max-Height) + 12px) !important;

                        & .tabbrowser-tab {
                            opacity: 1 !important;
                            visibility: visible !important;
                        }

                        &::before {
                            opacity: 0 !important;
                            height: 0px !important;
                        }
                    }

                    @media not -moz-pref("neo.features.essentials.keep-expanded") {
                        &::before {
                            order: 0;
                            content: "Neo";
                            white-space: pre-wrap;
                            text-align: center;
                            text-justify: center;
                            align-content: center;
                            font-size: 15px;
                            font-weight: 540;
                            color: color-mix(in srgb, var(--Neo-Glow-Color-2) 100%, white);
                            position: sticky;
                            top: 0%;
                            left: 0%;
                            height: calc(var(--tab-min-height) + 4px);
                            width: 100%;

                            filter: drop-shadow(0px 0px 3px var(--Neo-Glow-Color-2)) brightness(1.05);
                        }

                        &:has(.tabbrowser-tab[selected])::before {
                            display: none !important;
                        }
                    }
                }
            }

            @media not -moz-pref("neo.features.essentials.expanded.disabled") {
                &[zen-sidebar-expanded="true"].zen-essentials-container {
                    &:hover {
                        max-height: calc(4 * (var(--tab-min-height) + 4px) + 12px) !important;
                    }
                }
            }
        }
    }
}

